# elredactor

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  close-issue.yml  nightly.yml
app/: config.py  main.py
app/api/v1/routers/: contsants.py  documents.py  users.py
app/crud/: user.py  users.py
app/db/: base.py  lifespan.py  mixins.py  session.py
app/models/: user.py  users.py
app/schemas/: user.py  users.py
app/vector_db/: lifespan.py  session.py
migrations/: env.py
migrations/versions/: 202607161951_7f5e313ca78c_add_users_table.py
nginx/conf.d/: app.http.conf  app.https.conf
tests/integration/: conftest.py  test_documents.py  test_health.py  test_users.py
tests/unit/: conftest.py  test_config.py  test_health.py  test_uploadvalidator_documents.py  test_user.py  test_users.py  test_users_crud.py  test_users_models.py  test_users_schemas.py
tests/unit/users/: test_crud.py
