[project]
name = "elredactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "openai>=2.44.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=0.28.1",
    "mutmut>=3.6.0",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "unit: unit tests — no external services",
    "integration: integration tests — requires PostgreSQL and Qdrant",
    "e2e: end-to-end tests — requires full stack and Playwright",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.mutmut]
source_paths = ["app/"]
pytest_add_cli_args_test_selection = ["tests/", "--no-cov", "--ignore=tests/e2e", "--import-mode=importlib"]
